--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,113 @@
-# Node
+# Dependencies
 node_modules/
-.env
-.env.*
-
-# Logs
-logs/
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs/
+*.log
+src/logs/
+src/logs/combined.log
+src/logs/error.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Build
-build/
-dist/
-
-# Docker
-*.local
-#Dockerfile*
-#docker-compose*
-
-# Project data
-config/settings.json
-config/projects.json
-projects/
-
-# SSH keys (never commit private keys)
-*.pem
-*.pub
-*.key
-.ssh/
-
-# Misc
+# IDE files
 .idea/
 .vscode/
 *.swp
 *.swo
 *.bak
+*.tmp
 
-# Systemd
-systemd/*.service
+# Build outputs
+build/
+dist/
+out/
 
-# Parent folder (if present)
-/python github auto deploy/
+# Docker
+*.local
+# Keep Dockerfile and docker-compose.yaml but ignore local overrides
+docker-compose.override.yml
+
+# User-specific configuration files (contains sensitive data)
+config/settings.json
+config/projects.json
+projects/
+
+# SSH keys and certificates (NEVER commit private keys)
+*.pem
+*.pub
+*.key
+.ssh/
+id_rsa
+id_rsa.pub
+*.crt
+*.csr
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+
+
+# PM2 files
+.pm2/
+
+# Git hooks (if any)
+.git/hooks/
+
+# Backup files
+*.backup
+*.old
 
