--- a/package.json
+++ b/package.json
@@ -23,24 +23,25 @@
   "author": "Universal Git Deployer",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
+    "chokidar": "^3.5.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1",
+    "multer": "^2.0.0",
     "node-cron": "^3.0.3",
-    "simple-git": "^3.20.0",
-    "fs-extra": "^11.1.1",
-    "dotenv": "^16.3.1",
-    "child_process": "^1.0.2",
     "path": "^0.12.7",
-    "body-parser": "^1.20.2",
+    "pm2": "^5.3.0",
+    "simple-git": "^3.20.0",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
-    "axios": "^1.6.2",
-    "chokidar": "^3.5.3",
-    "pm2": "^5.3.0"
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
@@ -57,4 +58,4 @@
     "url": "https://github.com/yourusername/universal-git-deployer/issues"
   },
   "homepage": "https://github.com/yourusername/universal-git-deployer#readme"
-} 
+}
